[gd_scene load_steps=6 format=3 uid="uid://djsgs6j8itff5"]

[ext_resource type="Script" path="res://HealthBar.gd" id="1_nc71r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yayh"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_peurx"]
bg_color = Color(0.6, 0.392157, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eucoo"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngert"]
bg_color = Color(0.6, 0.890196, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_nc71r")

[node name="EnemyHealth" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -5.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_5yayh")
theme_override_styles/fill = SubResource("StyleBoxFlat_peurx")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="AllyHealth" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -5.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_eucoo")
theme_override_styles/fill = SubResource("StyleBoxFlat_ngert")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="HPLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -13.0
offset_right = 21.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 6
text = "14/20"
horizontal_alignment = 1
vertical_alignment = 1
